--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/scroll.css">
     <style>
         body {
             margin: 0;
@@ -59,6 +60,8 @@
 
 <body>
     <canvas class="canvas-container" id="starCanvas"></canvas>
+    
+    <div class="progress"></div>
 
     <header id="header" class="header">
         <div class="container">
@@ -376,4 +379,5 @@
         animate();
     </script>
 </body>
+<script src="assets/js/scroll.js"></script>
 </html>
