--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <div class="service__icon">
                             <i class="ri-layout-4-fill"></i>
                         </div>
-                        <h3 class="service__title">Android Deveclopment</h3>
+                        <h3 class="service__title">Android Development</h3>
                         <a href="#" class="service__link">"Providing professional Android development services to help bring your app ideas to life. Specializing in custom, user-friendly, and high-performance mobile solutions tailored to your needs."</a>
                     </div>
                     <div class="service__card">
