--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
             
             <label>Select Service:</label>
             <div class="service-tiles">
-                <label><input type="radio" name="service" value="Android Development" required> Android Development</label><br>
-                <label><input type="radio" name="service" value="Web Development"> Web Development</label><br>
-                <label><input type="radio" name="service" value="Consultation"> Consultation</label>
+                <label><input type="radio" name="service" value="Android Development"> Android Development</label>
+                <label><input type="radio" name="service" value="Web Development"> Web Development</label>
+                <label><input type="radio" name="service" value="Consultation"> Consultation</label><br>
             </div>   
             
             <textarea id="message" name="message" rows="4" placeholder="Message" required></textarea>
-            <input type="hidden" name="redirect" value="https://raghavg.vercel.app"><br>
+            <input action="?" type="hidden" name="redirect" value="https://raghavg.vercel.app"><br>
             <div class="g-recaptcha" data-sitekey="6Lc4QoAqAAAAAK4KHu8snJrtsD6D8Oq1qgbYJm6Y"></div>
             <button type="submit" class="submit-button">Submit</button>
         </form>
