--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                 <label><input type="radio" name="service" value="Android Development"> Android Development</label>
                 <label><input type="radio" name="service" value="Web Development"> Web Development</label>
                 <label><input type="radio" name="service" value="Consultation"> Consultation</label><br>
-            </div>   
+            </div>
             
             <textarea id="message" name="message" rows="4" placeholder="Message" required></textarea>
-            <input action="?" type="hidden" name="redirect" value="https://raghavg.vercel.app"><br>
-            <div class="g-recaptcha" data-sitekey="6Lc4QoAqAAAAAK4KHu8snJrtsD6D8Oq1qgbYJm6Y"></div>
+            <input action="?" type="hidden" name="redirect" value="https://raghavg.vercel.app">
+            <!--<div class="g-recaptcha" data-sitekey="6Lc4QoAqAAAAAK4KHu8snJrtsD6D8Oq1qgbYJm6Y"></div>-->
             <button type="submit" class="submit-button">Submit</button>
         </form>
     </div>
